--- a/src/sass/credits.scss
+++ b/src/sass/credits.scss
@@ -20,14 +20,26 @@ section{
 
 
 .credits{
+  // &_big-container{
+  //   width: 100vw;
+  //   overflow-x: hidden;
+  // }
 
     &_content{
         @include flex-variable(column, nowrap, flex-start, center, center);
+        width: 100vw;
+        overflow-x: hidden;
 
         &_header{
             width: 100%;
             height: 95vh;
             @include flex-variable(row, nowrap, space-between, center, center);
+
+            @media screen and (max-width: 750px) {
+              @include flex-variable(column, nowrap, flex-start, center, center);
+              margin-top: 2rem;
+              position: relative;
+            }
 
             & h2{
                 font-size: 320%;
@@ -41,12 +53,28 @@ section{
 
                 @media screen and (max-width: 1100px) {
                     font-size: 280%;
-                    flex-grow: 0;
+                    // flex-grow: 0;
                 }
 
                 @media screen and (max-width: 430px) {
                     font-size: 230%;
                 }
+            }
+
+            & img{
+              @media screen and (max-width: 750px) {
+               position: absolute;
+               right: 0;
+               bottom: 5rem;
+              }
+
+              @media screen and (max-width: 400px) {
+                width: 90%;
+               }
+
+              //  @media screen and (max-width: 350px) {
+              //     width: 60%;
+              //   }
             }
         }
 
@@ -54,17 +82,32 @@ section{
             width: 100%;
             flex-direction: inherit;
             margin-bottom: 8rem;
+
+            &:last-of-type{
+              margin: 3rem;
+            }
             
             & h3{
                 width: 100%;
                 text-align: center;
                 font-size: 250%;
                 text-shadow: 0 0 10px $color_on-primary-2-variant;
+
+                @media screen and (max-width: 600px) {
+                 padding: 0 1.5rem;
+                 font-size: 220%;
+                 }
             }
 
             & a{
                 position: relative;
                 font-size: 110%;
+
+                @media screen and (max-width: 600px) {
+                  @include flex-variable(column, nowrap, flex-start, center, center);
+                  max-width: 98%;
+                  text-align: center;
+                }
 
                 &:before{
                     content: '';
@@ -82,6 +125,46 @@ section{
                     margin-bottom: .5rem;
                 }
             }
+
+            & .special-br{
+              display: none;
+              
+              @media screen and (max-width: 600px) {
+                display: block;
+                }
+            }
+        }
+
+        &_credit-pic-container{
+          @include flex-variable(row, wrap, space-between, center, center);
+          padding: 1rem 2rem;
+          width: 100%;
+          margin-top: 5rem;
+
+          @media screen and (max-width: 810px) {
+            @include flex-variable(column, nowrap, flex-start, center, center);
+           }
+
+          & img:not(.full-pic){
+            width: 30rem;
+            height: 8rem;
+            object-fit: cover;
+
+            @media screen and (max-width: 600px) {
+              width: 95%;
+            }
+          }
+
+          & .full-pic{
+            width: 20rem;
+          }
+
+          & a{
+            flex-grow: 1;
+            text-align: center;
+            margin: 2rem;
+          }
+
         }
     }
 }
